--- a/awwards/templates/index.html
+++ b/awwards/templates/index.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 {% block content %}
+<img src="https://images.pexels.com/photos/169573/pexels-photo-169573.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" style="width:100vw" alt="">
+<br><br>
 <div class="row">
 
   {% for post in posts %}
@@ -15,15 +17,15 @@
       {{post.user.username}}
       <br>
      <h3>Title:<h3>{{post.name}}</h3>
-     
+
     </div>
-   
-    <div id="demo" class="carousel slide" data-ride="carousel">      
+
+    <div id="demo" class="carousel slide" data-ride="carousel">
             <!-- The slideshow -->
             <div class="carousel-inner">
                 <a href='/one/{{post.id}}'>
               <div class="carousel-item active">
-                <img src="{{post.image1.url}}" alt="Los Angeles" height="300px" width="400px"> 
+                <img src="{{post.image1.url}}" alt="Los Angeles" height="300px" width="400px">
               </div>
               <div class="carousel-item">
                 <img src="{{post.image2.url}}" alt="Chicago" height="300px" width="400px">
@@ -33,8 +35,8 @@
               </div>
             </div>
         </a>
-          
-            
+
+
           </div>
 </div>
 </div>
@@ -46,25 +48,24 @@
   <div class="modal-dialog">
 
       <!-- Modal content-->
-      <div style="font-size: 20px; font-family: 'Mali', cursive;" class="modal-content">
+      <div style="font-size: 20px; font-family: 'Mali', sans-serif;;" class="modal-content">
           <div class="modal-header">
-            <h2>NEW PROJECT</h2>
-           
+            <h2>your project</h2>
+
               <button type="button" class="close" data-dismiss="modal">&times;</button>
-          
+
           </div>
             <div class='row' style="margin-left: 10px;" >
-                <em><b>N/B:<h4>Fill in all the fields</h4></b></em>
             </div>
           <div class="modal-body">
               <form action="{% url 'posts' %}" method="post" enctype="multipart/form-data">
                 {%csrf_token%}
-            
+
                 {% bootstrap_form form %}
-                
+
                 <button class='btn btn-primary' type='submit' >SUBMIT</button>
             </form>
-             
+
               <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
               </div>
