save the changes to heroku

--- a/awwards/templates/index.html
+++ b/awwards/templates/index.html
@@ -1,79 +1,123 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 {% block content %}
+<p class="line-1 anim-typewriter">welcome to award site hope you get a good experience</p>
 <img src="https://images.pexels.com/photos/169573/pexels-photo-169573.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" style="width:100vw" alt="">
 <br><br>
 <div class="row">
 
   {% for post in posts %}
-<div class="col-md-4">
-  <div class="card mb-4">
-    <div class="card-header">
-      {% if post.user.profile.dp %}
-      <img src="{{post.user.profile.dp.url}}" style="border-radius: 50%; width: 70px; height: 70px;" class="img-thumbnail " id="prof" alt="">
-      {% else %}
-      <img src="https://afcm.ca/wp-content/uploads/2018/06/no-photo.png" style="border-radius: 50%; width: 70px; height: 70px;" class="img-thumbnail " alt="">
-      {% endif %}
-      {{post.user.username}}
-      <br>
-     <h3>Title:<h3>{{post.name}}</h3>
+  <div class="col-md-4">
+    <div class="card mb-4">
+      <div class="card-header">
+        {% if post.user.profile.dp %}
+        <img src="{{post.user.profile.dp.url}}" style="border-radius: 50%; width: 70px; height: 70px;" class="img-thumbnail " id="prof" alt="">
+        {% else %}
+        <img src="https://afcm.ca/wp-content/uploads/2018/06/no-photo.png" style="border-radius: 50%; width: 70px; height: 70px;" class="img-thumbnail " alt="">
+        {% endif %}
+        {{post.user.username}}
+        <br>
+        <h3>Title:<h3>{{post.name}}</h3>
 
-    </div>
+      </div>
 
-    <div id="demo" class="carousel slide" data-ride="carousel">
-            <!-- The slideshow -->
-            <div class="carousel-inner">
-                <a href='/one/{{post.id}}'>
-              <div class="carousel-item active">
-                <img src="{{post.image1.url}}" alt="Los Angeles" height="300px" width="400px">
-              </div>
-              <div class="carousel-item">
-                <img src="{{post.image2.url}}" alt="Chicago" height="300px" width="400px">
-              </div>
-              <div class="carousel-item">
-                <img src="{{post.image3.url}}" alt="New York" height="300px" width="400px">
-              </div>
+      <div id="demo" class="carousel slide" data-ride="carousel">
+        <!-- The slideshow -->
+        <div class="carousel-inner">
+          <a href='/one/{{post.id}}'>
+            <div class="carousel-item active">
+              <img src="{{post.image1.url}}" alt="Los Angeles" height="300px" width="400px">
             </div>
+            <div class="carousel-item">
+              <img src="{{post.image2.url}}" alt="Chicago" height="300px" width="400px">
+            </div>
+            <div class="carousel-item">
+              <img src="{{post.image3.url}}" alt="New York" height="300px" width="400px">
+            </div>
+        </div>
         </a>
 
 
-          </div>
-</div>
-</div>
-<br>
-<br>
+      </div>
+    </div>
+  </div>
+  <br>
+  <br>
   {% endfor %}
 </div>
 <div class="modal fade" id="account" role="dialog">
   <div class="modal-dialog">
 
-      <!-- Modal content-->
-      <div style="font-size: 20px; font-family: 'Mali', sans-serif;;" class="modal-content">
-          <div class="modal-header">
-            <h2>your project</h2>
+    <!-- Modal content-->
+    <div style="font-size: 20px; font-family: 'Mali', sans-serif;;" class="modal-content">
+      <div class="modal-header">
+        <h2>your project</h2>
 
-              <button type="button" class="close" data-dismiss="modal">&times;</button>
-
-          </div>
-            <div class='row' style="margin-left: 10px;" >
-            </div>
-          <div class="modal-body">
-              <form action="{% url 'posts' %}" method="post" enctype="multipart/form-data">
-                {%csrf_token%}
-
-                {% bootstrap_form form %}
-
-                <button class='btn btn-primary' type='submit' >SUBMIT</button>
-            </form>
-
-              <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              </div>
-          </div>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
 
       </div>
+      <div class='row' style="margin-left: 10px;">
+      </div>
+      <div class="modal-body">
+        <form action="{% url 'posts' %}" method="post" enctype="multipart/form-data">
+          {%csrf_token%}
+
+          {% bootstrap_form form %}
+
+          <button class='btn btn-primary' type='submit'>SUBMIT</button>
+        </form>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+
+    </div>
   </div>
 
 </div>
 
 {% endblock %}
+
+<style media="screen">
+
+@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
+
+/* html{
+ min-height: 100%;
+ overflow: hidden;
+} */
+p{
+ height: calc(100vh - 8em);
+ padding: 4em;
+ color: rgba(255,255,255,.75);
+ font-family: 'Anonymous Pro', monospace;
+ background-color: rgb(25,25,25);
+}
+.line-1{
+   position: relative;
+   top: 50%;
+   width: 24em;
+   margin: 0 auto;
+   border-right: 2px solid rgba(255,255,255,.75);
+   font-size: 180%;
+   text-align: center;
+   white-space: nowrap;
+   overflow: hidden;
+   transform: translateY(-50%);
+}
+
+/* Animation */
+.anim-typewriter{
+ animation: typewriter 4s steps(44) 1s 1 normal both,
+            blinkTextCursor 500ms steps(44) infinite normal;
+}
+@keyframes typewriter{
+ from{width: 0;}
+ to{width: 24em;}
+}
+@keyframes blinkTextCursor{
+ from{border-right-color: rgba(255,255,255,.75);}
+ to{border-right-color: transparent;}
+}
+</style>
