--- a/awwards/templates/navbar.html
+++ b/awwards/templates/navbar.html
@@ -1,37 +1,39 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/">projects</a>
-    <button class="btn btn-outline-success" data-toggle="modal" data-target="#account" > New Project </button>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <a class="navbar-brand" href="/">projects</a>
+  <button class="btn btn-outline-success" data-toggle="modal" data-target="#account"> New Project </button>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
 
-        <form class="form-inline my-2 my-lg-0" style="margin-left: 400px;" action="{% url 'search' %}" >
-            <input class="form-control mr-sm-2" name='projects' type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
+      <form class="form-inline my-2 my-lg-0" style="margin-left: 400px;" action="{% url 'search' %}">
+        <input class="form-control mr-sm-2" name='projects' type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
 
-      </ul>
-      <ul class="navbar-nav mr-auto" >
-        <li class="nav-item" >
-          <a style="color:white; font-family:serif;font-size: 20px; "href="signup">signup</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav mr-auto" >
-        <li class="nav-item" >
-        {% if request.user.profile.dp %}
-        <a class="nav-link" href="/profile/">
-        <img src="{{request.user.profile.dp.url }}" style="border-radius: 50%; width: 50px; height: 50px;"  id="prof">
-        {% else %}
-        <img src="https://www.w3schools.com/howto/img_avatar2.png" style="border-radius: 50%; width: 50px; height: 50px;">
-        {% endif %}
-        <a href="/profile/" style="color:white">{{request.user.username}}</a>
-      </a>
+    </ul>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a style="color:white; font-family:serif;font-size: 20px; " href="signup">signup</a>
       </li>
     </ul>
-    </div>
-  </nav>
-  <br>
-  <br>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        {% if request.user.profile.dp %}
+        <a class="nav-link" href="/profile/">
+          <img src="{{request.user.profile.dp.url }}" style="border-radius: 50%; width: 50px; height: 50px;" id="prof">
+          {% else %}
+          <img src="https://www.w3schools.com/howto/img_avatar2.png" style="border-radius: 50%; width: 50px; height: 50px;">
+          {% endif %}
+          <a href="/profile/" style="color:white">{{request.user.username}}</a>
+        </a>
+      </li>
+    </ul>
+    <a href="/logout">Logout</a>
+
+  </div>
+</nav>
+<br>
+<br>
