added whitenoise link to settings

--- a/awwards/templates/profile/profile.html
+++ b/awwards/templates/profile/profile.html
@@ -67,10 +67,9 @@
     <!-- Modal content-->
     <div style="font-size: 20px; font-family: 'Mali', cursive;" class="modal-content">
       <div class="modal-header">
-
         <h2>EDIT PROFILE </h2>
 
-        <button type="button" class="close" data-dismiss="modal">&times;asdfcgvbh</button>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
 
       </div>
       <div class='row' style="margin-left: 10px;">
