added a background image

--- a/awwards/templates/index.html
+++ b/awwards/templates/index.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 {% block content %}
-<p class="line-1 anim-typewriter">welcome to award site hope you get a good experience</p>
-<img src="https://images.pexels.com/photos/169573/pexels-photo-169573.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" style="width:100vw" alt="">
+<div class="back">
+<p class="line-1 anim-typewriter" style="color:white; font-family:sans-serif; text-align:center;font-size:29px; font-weight:bold; padding-top:70px;">welcome to award site hope you get a good experience</p>
+</div>
 <br><br>
 <div class="row">
 
@@ -79,7 +80,7 @@
 
 {% endblock %}
 
-<style media="screen">
+<style >
 
 @import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
 
