--- a/awwards/templates/navbar.html
+++ b/awwards/templates/navbar.html
@@ -31,7 +31,7 @@
         </a>
       </li>
     </ul>
-    <a href="/logout">Logout</a>
+    <a href="/logout" style="color:white;">Logout</a>
 
   </div>
 </nav>
