--- a/awwards/templates/profile/profiles.html
+++ b/awwards/templates/profile/profiles.html
@@ -1,57 +1,36 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
 {% block content %}
-
+<img src="" alt="">
 <div class="row">
-  <div class="col-md-4">
-    {% if user.profile.dp %}
-    <img id="" src="{{user.profile.dp.url}}" style="border-radius: 50%; width: 70px; height: 70px;" class="img-thumbnail " alt="">
-    {{ user.username}}
-    {{ user.profile.bio }}
-    {% else %}
-    <img src="https://afcm.ca/wp-content/uploads/2018/06/no-photo.png" style="border-radius: 50%; width: 70px; height: 70px;" class="img-thumbnail " alt="">
-    {% endif %}
-
-  </div>
-  <div class="col-md-4">
+        <div class="col-md-4">
+            {% if profile.dp %}
+            <div class="row">
 
 
-  </div>
-  <div class="col-md-4">
+            <div class="cont">
+              <img id="" class="image" src="{{profile.dp.url}}" style="border-radius: 100%; width: 200px; height: 200px;" class="img-thumbnail " alt="">            </div>
 
-  </div>
-</div>
-<hr>
-<div class="row">
-  {% for post in posts %}
-  <div class="col-md-4">
+            {% else %}
+            <div class="cont">
+              <img id="" class="image" src="http://www.digitalvertigo.co.uk/forum/uploads//monthly_05_2016/post-3489-0-19929300-1462982286.jpg" style="border-radius: 100%; width: 200px; height: 200px;" class="img-thumbnail " alt="">
 
-    <a href="{{post.link}}">View site</a>
+            </div>
 
-
-    <div id="demo" class="carousel slide" data-ride="carousel">
-
-      <!-- The slideshow -->
-      <div class="carousel-inner">
-        <a href='/one/{{post.id}}'>
-          <div class="carousel-item active">
-            <img style="width: 300px; height: 300px;" src="{{post.image1.url}}" alt="Los Angeles">
+            <h3><em>{{ profile.user.username}}</em></h3>
+            {% endif %}
+            <h3><em>{{ profile.user.username}}</em></h3>
           </div>
-          <div class="carousel-item">
-            <img style="width: 300px; height: 300px;" src="{{post.image2.url}}" alt="Chicago">
-          </div>
-          <div class="carousel-item">
-            <img style="width: 300px; height: 300px;" src="{{post.image3.url}}" alt="New York">
-          </div>
+            <h3><em>{{profile.profile.bio}}</em></h3>
+        </div>
+
+
+
+        <div class="col-md-4">
+
+        </div>
       </div>
-      </a>
-
-
-
-
-    </div>
-  </div>
-
-  {% endfor %}
-</div>
-
+      <hr>
+      <div class="row">
+      </div>
 {% endblock %}
