--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,10 @@
+.back{
+  background-image: url("img1.jpeg");
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
